[gd_scene load_steps=5 format=3 uid="uid://d4fi1ajmniypv"]

[ext_resource type="Script" path="res://src/gui/tool_demo.gd" id="1_jsi6g"]
[ext_resource type="Texture2D" uid="uid://csreg1ta634yf" path="res://assets/tools/button6.png" id="2_e787w"]
[ext_resource type="Theme" uid="uid://4gucrwdin4g" path="res://assets/fonts/pixel_font_theme.tres" id="3_s58pq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbmcl"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="ToolDemo" type="PanelContainer"]
script = ExtResource("1_jsi6g")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbmcl")

[node name="IconPanel" type="TextureRect" parent="HBoxContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_e787w")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbmcl")

[node name="NameLabel" type="Label" parent="HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme = ExtResource("3_s58pq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Line"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptLabel" type="Label" parent="HBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("3_s58pq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Create perfectly straight lines!!!"
autowrap_mode = 3
